<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:iconSpaceReserved="false" >

    <PreferenceCategory
        app:title="@string/notification_category"
        app:iconSpaceReserved="false" >

        <SwitchPreference
            app:key="@string/daily_reminder_key"
            app:title="@string/daily_reminder_title"
            app:summary="@string/daily_reminder_summary"
            app:defaultValue="false"
            app:iconSpaceReserved="false" />

        <SwitchPreference
            app:key="@string/release_reminder_key"
            app:title="@string/release_reminder_title"
            app:summary="@string/release_reminder_summary"
            app:defaultValue="false"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/language_category"
        app:iconSpaceReserved="false" >

        <Preference
            app:key="change_language_key"
            app:title="@string/change_language_title"
            app:summary="@string/change_language_summary"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

</PreferenceScreen>
